[project]
name = "binax"
version = "0.1.0"
description = "JAX-based reinforcement learning framework for bin packing optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "chex>=0.1.85",
    "hydra-core>=1.3.0",
    "wandb>=0.16.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "jupyter>=1.1.1",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0.0", "ipykernel>=6.25.0", "pre-commit>=3.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py310"
include = ["binax/**/*.py"]
exclude = ["**/examples", "**/tests"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint]
ignore = ["N803", "N806", "N815"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = false
split-on-trailing-comma = true
lines-between-types = 0
lines-after-imports = 2
order-by-type = true
no-lines-before = ["first-party"]
known-third-party = [
    "jax",
    "flax",
    "optax",
    "chex",
    "hydra",
    "wandb",
    "numpy",
    "matplotlib",
    "seaborn",
    "tqdm",
    "pytest",
    "black",
    "isort",
    "mypy",
    "jupyter",
]
known-first-party = ["binax"]
